--- a/WolkenNET/templates/footer.html
+++ b/WolkenNET/templates/footer.html
@@ -3,15 +3,46 @@
 <#include "snippets/modal.html">
 
   <script src="/js/script.js"></script>
+  <footer class="footer">
+    <div class="container">
+        <div class="row ">
+            <div class="col-md-4 text-center text-md-left ">
+                
+                <div class="py-0">
+                  <a href="/"><img src="/img/logo-cyan.png" class="response-image"></a>
 
-  <div class="footer">
-    © 2021-2021 WolkenNET
-    <a href="/team" title="Wer arbeitet an diesem Ding?"><i class="fas fa-chalkboard-teacher"></i> Team</a> |
-    <a href="/impressum"><i class="fas fa-info"></i> Impressum</a> |
-    <a href="/datenschutz" title="Wie schützen wir eure Daten?"> <i class="fas fa-user-shield"></i>
-      Datenschutzerklärung</a> |
-    <a href="/forenregeln" title="Damit wir auch in der Legalität bleiben"> <i class="fas fa-ruler"></i> Forenregeln</a>
-    |
-    <a href="/telefon-seelsorge" title="Du suchst professionelle Seelsorge?"> <i class="fas fa-phone-square"></i>
-      Telefonseelsorge</a>
-  </div>
+                    <p class="footer-links font-weight-bold">
+                      <a href="/team" title="Wer arbeitet an diesem Ding?"><i class="fas fa-chalkboard-teacher"></i> Team</a>
+                      <a href="/impressum"><i class="fas fa-info"></i> Impressum</a>
+                      <a href="/datenschutz" title="Wie schützen wir eure Daten?"> <i class="fas fa-user-shield"></i>
+                        Datenschutzerklärung</a>
+                      <a href="/forenregeln" title="Damit wir auch in der Legalität bleiben"> <i class="fas fa-ruler"></i> Forenregeln</a>
+                      <a href="/telefon-seelsorge" title="Du suchst professionelle Seelsorge?"> <i class="fas fa-phone-square"></i>
+                        Telefonseelsorge</a>
+                        <a href="/spenden" title="Du möchtest uns unterstützen?"> <i class="fas fa-heart"></i>
+                          Spenden</a>
+                    </p>
+                    <p class="text-light py-4 mb-4">&copy;2021 WolkenNET.</p>
+                </div>
+            </div>
+            
+            <div class="col-md-4 text-white text-center text-md-left ">
+                <div class="py-2 my-4">
+                    <div>
+                        <p><i class="fa fa-envelope  mx-2"></i><a href="mailto:info@wolkennet.de">info@wolkennet.de</a></p>
+                    </div>  
+                </div>  
+            </div>
+            
+            <div class="col-md-4 text-white my-4 text-center text-md-left ">
+                <span class=" font-weight-bold ">Über uns</span>
+      <p class="text-warning my-2" >WolkenNET ist ein Forum um sich über psychische Krankheiten auszutauschen.</p>
+                <div class="py-2">
+                    <a target="_blank" href="https://www.instagram.com/wolkennet.de/"><i class="fab fa-instagram fa-2x mx-3"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/WolkenNet"><i class="fab fa-facebook fa-2x mx-3"></i></a>
+                    <a href="/spenden"><i class="fas fa-heart fa-2x mx-3"></i></a>
+                </div>
+            </div>
+        </div>  
+    </div>
+ </footer>
