--- a/WolkenNET/templates/ap/base.html
+++ b/WolkenNET/templates/ap/base.html
@@ -14,7 +14,7 @@
       <link href="/css/ap.css" rel="stylesheet">
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
       <script src="https://kit.fontawesome.com/3046fddc30.js" crossorigin="anonymous"></script>
-      
+      <script src="/js/apscript.js"></script>
    </head>
    <body>
 <div class="wrapper">
