--- a/WolkenNET/templates/ap/base.html
+++ b/WolkenNET/templates/ap/base.html
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="col col-lg-2">
             <div class="profile-card">
-                <img src="https://www.nailseatowncouncil.gov.uk/wp-content/uploads/blank-profile-picture-973460_1280.jpg" alt="user" class="profile-photo">
+                <img src="/avatar/${avatar}.png" alt="user" class="profile-photo">
                 <h5>${titlebar}</h5>
             	<h5><a href="#" class="text-white">${username}</a></h5>
             </div>
