--- a/WolkenNET/templates/footer.html
+++ b/WolkenNET/templates/footer.html
@@ -1,4 +1,6 @@
 </div>
+</div>
+
 
 <#include "snippets/modal.html">
 
@@ -19,8 +21,8 @@
                       <a href="/forenregeln" title="Damit wir auch in der Legalität bleiben"> <i class="fas fa-ruler"></i> Forenregeln</a>
                       <a href="/telefon-seelsorge" title="Du suchst professionelle Seelsorge?"> <i class="fas fa-phone-square"></i>
                         Telefonseelsorge</a>
-                        <a href="/spenden" title="Du möchtest uns unterstützen?"> <i class="fas fa-heart"></i>
-                          Spenden</a>
+                        <a href="/support" title="Du möchtest uns unterstützen?"> <i class="fas fa-heart"></i>
+                          Unterstützung</a>
                     </p>
                     <p class="text-light py-4 mb-4">&copy;2021 WolkenNET.</p>
                 </div>
@@ -40,7 +42,7 @@
                 <div class="py-2">
                     <a target="_blank" href="https://www.instagram.com/wolkennet.de/"><i class="fab fa-instagram fa-2x mx-3"></i></a>
                     <a target="_blank" href="https://www.facebook.com/WolkenNet"><i class="fab fa-facebook fa-2x mx-3"></i></a>
-                    <a href="/spenden"><i class="fas fa-heart fa-2x mx-3"></i></a>
+                    <a href="/support"><i class="fas fa-heart fa-2x mx-3"></i></a>
                 </div>
             </div>
         </div>  
