--- a/WolkenNET/templates/profileComments.html
+++ b/WolkenNET/templates/profileComments.html
@@ -12,7 +12,7 @@
             
                                                             <div class="checkbox">
                                                                 <a href="/profil/${contss.username}"><img
-                                                                        src="https://www.nailseatowncouncil.gov.uk/wp-content/uploads/blank-profile-picture-973460_1280.jpg"
+                                                                        src="/avatar/${contss.avatar}.png"
                                                                         class="img-responsive img-th img-rounded"
                                                                         style="max-height: 50px; max-width: 50px;"></a>
                                                             </div>
