--- a/WolkenNET/templates/spenden.html
+++ b/WolkenNET/templates/spenden.html
@@ -5,11 +5,11 @@
         <i class="fab fa-cc-paypal fa-10x"></i>
       </div>
       <div class="col-sm">
-        <h3>Spende doch gerne unserem Projekt</h3>
+        <h3>Unterstütze doch gerne unserem Projekt</h3>
         <p>Diese Seite zu betreiben ist nicht komplett gratis, und da wir unsere Dienste dir gerne weiterhin anbieten können, könnten wir ein paar Spenden sehr gut gebrauchen
             . Ich der Programmierer der Seite schreibe auch diese komplette Webseite alleine, und habe kein einzigen Helfer an meiner Seite, wir würden uns freuen wenn du uns ein kleines Trinkgeld dalassen könntest.
         </p>
-        <a target="_blank" href="https://paypal.me/wolkennetde" type="button" class="btn btn-primary btn-sm btn-block"><i class="fab fa-paypal"></i> Spende uns etwas über PayPal</a>
+        <a target="_blank" href="https://paypal.me/wolkennetde" type="button" class="btn btn-primary btn-sm btn-block"><i class="fab fa-paypal"></i> Untersütze uns etwas über PayPal</a>
       </div>
     </div>
   </div>
