--- a/WolkenNET/templates/ap/base.html
+++ b/WolkenNET/templates/ap/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="de">
    <head>
+    <meta charset="utf-8">
       <title>Admin Panel - ${titlebar}</title>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -32,7 +33,7 @@
               <li><i class="fas fa-tachometer-alt icon2"></i><div><a href="/ap/dashboard">Dashboard</a></div></li>
               <li><i class="fas fa-sliders-h icon3"></i><div><a href="/ap/settings">System Einstellungen</a></div></li>
               <li><i class="fas fa-biohazard icon4"></i><div><a href="/ap/topic">Themen Manager</a></div></li>
+              <li><i class="fas fa-user icon1"></i><div><a href="/ap/user">Nutzerverwaltung</a></div></li>
             </ul>
-          
         </div>
   </#if>
