--- a/WolkenNET/templates/ap/topicc.html
+++ b/WolkenNET/templates/ap/topicc.html
@@ -18,7 +18,7 @@ function getParameterByName(name, url = window.location.href) {
 </script>
         <div class="col">
                 <h1><i class="fas fa-edit"></i> Erstelle oder bearbeite ein Thema</h1>
-                <form method="post" action="/ap/topic">
+                <form method="post" action="/ap/topic" accept-charset="UTF-8">
                     <div class="form-group">
                       <label>Titel (&Uuml;berschrift)</label>
                       <input type="name" name="title" value="${ttitle}" class="form-control">
