--- a/WolkenNET/templates/profileComments.html
+++ b/WolkenNET/templates/profileComments.html
@@ -21,7 +21,8 @@
                                                         </div>
                                                         <div class="media-body">
                                                             <div class="media-heading">
-                                                                
+                                                                <a href="/beitrag/${contss.sublink}/${contss.userid}"
+                                                                    class="m-r-10"> ${contss.sublink}</a>
                                                                
                                                                 
                                                                 <#if contss.locked=1><span class="badge bg-yellow"><i
