--- a/WolkenNET/templates/subforum.html
+++ b/WolkenNET/templates/subforum.html
@@ -13,7 +13,7 @@
                                 var editor = true;
                             </script>
                         <div id="editorArea" class="container ea container-home col-8-home col-8-imp" style="display: none;">
-                            <form id="rl-form" action="/add/contribution" method="POST">
+                            <form id="rl-form" action="/add/contribution" method="POST" accept-charset="UTF-8">
                             <input type="text" name="title" class="form-control titlebox" placeholder="Titel" required autofocus>
                             <textarea type="text" name="bbcode_text" class="form-control" placeholder="Dein Beitrag" cols="30" rows="10" required></textarea>
                             <div class="cap-ff titlebox" id="captcha_container_post"></div>
