--- a/WolkenNET/templates/ap/dashboard.html
+++ b/WolkenNET/templates/ap/dashboard.html
@@ -76,6 +76,66 @@
             </div>
         </div>
     </div>
-</div>
+
+    <div class="row ">
+        <div class="col-xl-3 col-lg-6">
+            <div class="card l-bg-cherry">
+                <div class="card-statistic-3 p-4">
+                    <div class="card-icon card-icon-large"><i class="fab fa-autoprefixer"></i></div>
+                    <div class="mb-4">
+                        <h5 class="card-title mb-0">Themen</h5>
+                    </div>
+                    <div class="row align-items-center mb-2 d-flex">
+                        <div class="col-8">
+                            <h2 class="d-flex align-items-center mb-0">
+                                ${topics}
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-3 col-lg-6">
+            <div class="card l-bg-blue-dark">
+                <div class="card-statistic-3 p-4">
+                    <div class="card-icon card-icon-large"><i class="fas fa-comment-dots"></i></div>
+                    <div class="mb-4">
+                        <h5 class="card-title mb-0">Beiträge</h5>
+                    </div>
+                    <div class="row align-items-center mb-2 d-flex">
+                        <div class="col-8">
+                            <h2 class="d-flex align-items-center mb-0">
+                                ${conts}
+                            </h2>
+                        </div>
+                        
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-3 col-lg-6">
+            <div class="card l-bg-green-dark">
+                <div class="card-statistic-3 p-4">
+                    <div class="card-icon card-icon-large"><i class="fas fa-comment-alt"></i></div>
+                    <div class="mb-4">
+                        <h5 class="card-title mb-0">Kommentare</h5>
+                    </div>
+                    <div class="row align-items-center mb-2 d-flex">
+                        <div class="col-8">
+                            <h2 class="d-flex align-items-center mb-0">
+                                ${comments}
+                            </h2>
+                        </div>
+                    
+                    </div>
+
+                </div>
+            </div>
+        </div>
+       
+      
+    </div>
+
 	</div>
 </div>
