--- a/WolkenNET/templates/footer.html
+++ b/WolkenNET/templates/footer.html
@@ -23,6 +23,8 @@
                         Telefonseelsorge</a>
                         <a href="/support" title="Du möchtest uns unterstützen?"> <i class="fas fa-heart"></i>
                           Unterstützung</a>
+                          <a href="/verweise" title="Unsere abhänigkeiten"> <i class="fas fa-link"></i>
+                            Verweise</a>
                     </p>
                     <p class="text-light py-4 mb-4">&copy;2021 WolkenNET.</p>
                 </div>
@@ -30,15 +32,16 @@
             
             <div class="col-md-4 text-white text-center text-md-left ">
                 <div class="py-2 my-4">
-                    <div>
-                        <p><i class="fa fa-envelope  mx-2"></i><a href="mailto:info@wolkennet.de">info@wolkennet.de</a></p>
+                  <div class="py-0">
+                        <a href="mailto:info@wolkennet.de" title="Du möchtest uns unterstützen?"><i class="fa fa-envelope mx-2"></i>info@wolkennet.de</a><hr>
+                          <a style="padding-left: 6px;" title="Du möchtest uns unterstützen?"> <i class="fab fa-whatsapp"></i> 01711413801</a>
                     </div>  
                 </div>  
             </div>
             
             <div class="col-md-4 text-white my-4 text-center text-md-left ">
                 <span class=" font-weight-bold ">Über uns</span>
-      <p class="text-warning my-2" >WolkenNET ist ein Forum um sich über psychische Krankheiten auszutauschen.</p>
+                    <p class="text-warning my-2" >WolkenNET ist ein Forum um sich über psychische Krankheiten auszutauschen.</p>
                 <div class="py-2">
                     <a target="_blank" href="https://www.instagram.com/wolkennet.de/"><i class="fab fa-instagram fa-2x mx-3"></i></a>
                     <a target="_blank" href="https://www.facebook.com/WolkenNet"><i class="fab fa-facebook fa-2x mx-3"></i></a>
