--- a/WolkenNET/templates/snippets/modal.html
+++ b/WolkenNET/templates/snippets/modal.html
@@ -8,7 +8,7 @@
                     <i class="fas fa-sign-in-alt fa-4x profile-img"></i>
                     <div id="alert-login">
                     </div>
-                    <form id="rl-form" action="/login" method="POST" class="form-signin">
+                    <form id="rl-form" action="/login" method="POST" class="form-signin" accept-charset="UTF-8">
                         <input type="text" name="email" class="form-control" placeholder="Email" required autofocus>
                         <input type="password" name="password" class="form-control" placeholder="Passwort" required>
 
@@ -30,7 +30,7 @@
                 <div class="account-wall">
                     <i class="fas fa-user-plus fa-4x profile-img"></i>
                     <div id="alert-register"></div>
-                    <form id="rl-form" action="/register" method="POST" class="form-signin">
+                    <form id="rl-form" action="/register" method="POST" class="form-signin" accept-charset="UTF-8">
                         <input type="text" name="email" class="form-control" placeholder="Email" required autofocus>
                         <input type="username" name="username" class="form-control" placeholder="Nutzername" required>
                         <input type="password" name="password" class="form-control" placeholder="Passwort" required>
